// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    className="fb-like"
    data-action="like"
    data-layout="standard"
    data-share={false}
    data-show-faces={false}
  />
</div>
`;

exports[`renders correctly with props 1`] = `
<div>
  <div
    className="fb-like"
    data-action="like"
    data-href="url"
    data-layout="standard"
    data-share={true}
    data-show-faces={false}
  />
</div>
`;
